compiler/weave_syntax/tests/data/syntax/declarations/constraint-0001.error
error: Unexpected tokens
        --> <source>:58:9
         |
      58 |         requires    (   t > 0       )
         |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      59 |         requires    (   t < 100     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      60 |         ensures     (   u > 21      )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      61 |         ensures     (   v < 37      )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      62 |         ensures     (   return  r   :   r > 0           )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      63 |         ensures     (                   v == old(v)     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      64 |         invariant   (                   v >= 10         )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:67:5
         |
      67 |     assert(t > 0);
         |     ^^^^^^^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:72:9
         |
      72 | call(x, _);
         |         ^
error: Unexpected tokens
        --> <source>:72:9
         |
      72 | call(x, _);
         |         ^
error: Expected '[token:identifier]'
        --> <source>:80:45
         |
      80 |     where (U: Concept4, Concept5,           )   // allow trailing comma
         |                                             ^
error: Unexpected tokens
        --> <source>:83:5
         |
      83 |     requires    debug       (   t > 0       )
         |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      84 |     requires    debug       (   t < 100     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      85 | 
         | 
     ... |
      88 |     ensures                 (   result > 0  )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      89 |     ensures                 (   v == old(v) )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      90 |     invariant               (   v >= 10     )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:92:5
         |
      92 |     assert(t > 0);
         |     ^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:103:5
         |
     103 |     #[config("DEBUG")]      requires    (                           t > 0                           )
         |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     104 |     #[config("CHECKED")]    ensures     (                           u > 21 && v < 37                )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     105 |     #[config("RELEASE")]    ensures     (   return  [rt, ru, rv]:   rt > 0 && ru > 0 && rv < old(v) )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     106 |     #[config("DEBUG")]      invariant   (                           v >= 10                         )
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:110:5
         |
     110 |     assert(debug: t > 0);
         |     ^^^^^^^^^^^^^^^^^^^^^
     111 |     assert(checked: t < 100, "t must be less than 100");
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:114:3
         |
     114 | #[requires(t > 0)]
         |   ^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:116:3
         |
     116 | #[invariant(v >= 10)]
         |   ^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:165:11
         |
     165 |     where T: Addable, Multiplicable)
         |           ^^^^^^^^^^^^^^^^^^^^^^^^^^
     166 |     requires(a != c)
         | ^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:166:16
         |
     166 |     requires(a != c)
         |                ^^^^^
     167 |     requires(b >= 0)
         | ^^^^^^^^^^^^^^^^^^^^
     168 |     ensures(c > 10)
         | ^^^^^^^^^^^^^^^^^^^
     169 |     ensures(r: r < 100)
         | ^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:169:18
         |
     169 |     ensures(r: r < 100)
         |                  ^^^^^
error: Unexpected tokens
        --> <source>:170:5
         |
     170 |     ensures(r: r > 10)
         |     ^^^^^^^^^^^^^^^^^^
     171 |     invariant(25 <= d)
         | ^^^^^^^^^^^^^^^^^^^^^^
     172 |     invariant(d <= 75)
         | ^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:174:5
         |
     174 |     assert(debug: a >= 42);
         |     ^^^^^^^^^^^^^^^^^^^^^^^
     175 |     assert(checked: b < 2137);
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     176 |     assert(release: (a <= d) && (d <= c));
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     177 | 
         | 
     178 |     // code
         | ^^^^^^^^^^^
     179 | 
         | 
     180 |     return c;
         | ^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:185:5
         |
     185 |     requires
         |     ^^^^^^^^
error: Unexpected tokens
        --> <source>:187:9
         |
     187 |         assert(x >= 0);
         |         ^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:190:9
         |
     190 |         assert(r * r == x);
         |         ^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:198:5
         |
     198 |     T: FloatingPoint
         |     ^^^^^^^^^^^^^^^^
     199 | requires
         | ^^^^^^^^
     200 | {
         | ^
     201 |     assert(a >= 0);
         | ^^^^^^^^^^
error: Unexpected tokens
        --> <source>:201:14
         |
     201 |     assert(a >= 0);
         |              ^^^^^^
     202 | }
         | ^
     203 | ensures (r)
         | ^^^^^^^^^^^
     ... |
     216 | }
         | ^
     217 | 
         | 
     218 | public function Update![type T, const N: Int32](
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:218:47
         |
     218 | public function Update![type T, const N: Int32](
         |                                               ^^
     219 |     in a: T,
         | ^^^^^^^^^^^^
     220 |     in b: T,
         | ^^^^^^^^^^^^
     221 |     out c: T,
         | ^^^^^^^^^^^^^
     222 |     ref d: T
         | ^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:223:3
         |
     223 | ) -> T
         |   ^^^^
     224 | where
         | ^^^^^
error: Unexpected tokens
        --> <source>:226:15
         |
     226 |     T: Addable, Multiplicable
         |               ^^^^^^^^^^^^^^^
error: Unexpected tokens
        --> <source>:228:1
         |
     228 | requires
         | ^^^^^^^^
     229 | {
         | ^
     230 |     assert(a != c);
         | ^^^^^^^^^^^^^^^^^^^
     ... |
     251 | 
         | 
     252 |     return c;
         | ^^^^^^^^^^^^^
     253 | }
         | ^
